updated for build

--- a/ops.yml
+++ b/ops.yml
@@ -1,7 +1,7 @@
 services:
-  - name: sample-app:0.1.0
+  - name: sample-app:0.3.0
     description: preview of sample app
-    run: node app.js
+    run: node index.js
     port: [ '8080:8080' ]
     domain: ""
     env:
